added a src folder

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "devDependencies": {
     "bootstrap": "^4.0.0-alpha.4",
     "gulp": "^3.9.1",
-    "gulp-sass": "^2.3.2"
+    "gulp-concat": "^2.6.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^2.0.0"
   }
 }
