--- a/package.json
+++ b/package.json
@@ -48,5 +48,13 @@
     "run-sequence": "^1.2.2",
     "scrollreveal": "^3.3.2",
     "tether": "^1.3.7"
+  },
+  "devDependencies": {
+    "gulp-jscs": "^4.0.0",
+    "gulp-jshint": "^2.0.2",
+    "gulp-plumber": "^1.1.0",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1",
+    "vinyl-ftp": "^0.5.0"
   }
 }
